--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,181 +1,218 @@
 ---
 ---
 
-@article{choi2013guidelines,
-  title={Guidelines for older-adult-friendly online tutorial for Facebook: Content, design, and training principles},
-  author={Choi, Wonchan and Carranza, Julia and Fox, Melissa},
-  journal={Proceedings of the American Society for Information Science and Technology},
-  volume={50},
+@article{xie2025investigating,
+  title={Investigating the interactions between individuals with disabilities and information retrieval systems: A review of help-seeking situations, search tactics, and design recommendations},
+  author={Xie, Iris and Choi, Wonchan and Lee, Hyun Seung and Hong, Bo Hyun and Wang, Shengang},
+  journal={Journal of the Association for Information Science and Technology},
+  year={2025},
+  publisher={John Wiley \& Sons, Inc. Hoboken, USA}
+}
+
+@article{choi2025college,
+  title={College students' credibility assessments of GenAI-generated information for academic tasks: An interview study},
+  author={Choi, Wonchan and Bak, Hyerin and An, Jiaxin and Zhang, Yan and Stvilia, Besiki},
+  journal={Journal of the Association for Information Science and Technology},
+  year={2025},
+  publisher={John Wiley \& Sons, Inc. Hoboken, USA},
+  abstract={The study explored college students' use of generative artificial intelligence (GenAI) tools, such as ChatGPT, for academic tasks and their perceptions and behaviors in assessing the credibility of GenAI-generated information. Semistructured interviews were conducted with 25 college students in the United States. Interview transcripts were analyzed using the qualitative content analysis method. The study identified various types of academic tasks for which students used ChatGPT, including writing, programming, and learning. Guided by two models of credibility assessment Hilligoss and Rieh (2008); Metzger (2007), six factors influencing students' motivation and ability to assess the credibility of GenAI-generated information were identified (e.g., task salience, social pressure). We also identified 9 constructs (e.g., refinedness, explainability), 5 heuristics (e.g., inter- and intrasystem consistency heuristics), and 10 cues (e.g., version and tone) used by students to assess the credibility of GenAI-generated information. This study provides theoretical and empirical findings regarding students' use of GenAI tools in the academic context and credibility evaluation of the system outputs using rich, qualitative interview data.},
+  doi={https://doi.org/10.1002/asi.24978},
+  selected={true}
+  pdf="2025-JASIST.pdf"
+}
+
+@article{an2024college,
+  title={College Students' Metaphors for ChatGPT: An Exploratory Study},
+  author={An, Jiaxin and Bak, Hyerin and Choi, Wonchan and Zhang, Yan and Stvilia, Besiki},
+  journal={Proceedings of the Association for Information Science and Technology},
+  volume={61},
   number={1},
-  pages={1--4},
-  year={2013},
-  publisher={Wiley Subscription Services, Inc., A Wiley Company Hoboken}
+  pages={846--848},
+  year={2024},
+  publisher={John Wiley \& Sons, Inc. Hoboken, USA},
+  abstract={The introduction of ChatGPT has sparked significant interest and presented both great opportunities and challenges to higher education. While more students are using ChatGPT, little is known about their mental models for and sensemaking of the system, including the metaphors they use to understand the system. In this exploratory study, we interviewed 25 students at three universities in the US during the summer of 2023 to identify the metaphors they use for ChatGPT. Through qualitative analysis of the interview transcripts, we found that participants commonly used metaphors to make sense of ChatGPT. They compared ChatGPT to humans and popular technologies or tools, with being the most frequently Google mentioned. These findings highlight the potential for metaphor-based design and the development of AI literacy programs.},
+  doi={https://doi.org/10.1002/pra2.1116}
 }
 
-@article{choi2017effects,
-  title={Effects of User Interface Design and Task Complexity Level on User Experience in an mHealth Application},
-  author={Choi, Wonchan and Tulu, Bengisu},
-  year={2017}
+@article{xie2024help,
+  title={Help-Seeking Situations Related to Visual Interactions on Mobile Platforms and Recommended Designs for Blind and Visually Impaired Users},
+  author={Xie, Iris and Choi, Wonchan and Wang, Shengang and Lee, Hyun Seung and Hong, Bo Hyun and Wang, Ning-Chiao and Cudjoe, Emmanuel Kwame},
+  journal={Journal of Imaging},
+  volume={10},
+  number={8},
+  pages={205},
+  year={2024},
+  publisher={MDPI},
+  abstract={While it is common for blind and visually impaired (BVI) users to use mobile devices to search for information, little research has explored the accessibility issues they encounter in their interactions with information retrieval systems, in particular digital libraries (DLs). This study represents one of the most comprehensive research projects, investigating accessibility issues, especially help-seeking situations BVI users face in their DL search processes. One hundred and twenty BVI users were recruited to search for information in six DLs on four types of mobile devices (iPhone, iPad, Android phone, and Android tablet), and multiple data collection methods were employed: questionnaires, think-aloud protocols, transaction logs, and interviews. This paper reports part of a large-scale study, including the categories of help-seeking situations BVI users face in their interactions with DLs, focusing on seven types of help-seeking situations related to visual interactions on mobile platforms: difficulty finding a toggle-based search feature, difficulty understanding a video feature, difficulty navigating items on paginated sections, difficulty distinguishing collection labels from thumbnails, difficulty recognizing the content of images, difficulty recognizing the content of graphs, and difficulty interacting with multilayered windows. Moreover, corresponding design recommendations are also proposed: placing meaningful labels for icon-based features in an easy-to-access location, offering intuitive and informative video descriptions for video players, providing structure information about a paginated section, separating collection/item titles from thumbnail descriptions, incorporating artificial intelligence image/graph recognition mechanisms, and limiting screen reader interactions to active windows. Additionally, the limitations of the study and future research are discussed.},
+  doi={https://doi.org/10.3390/jimaging10080205}
 }
 
-@article{yang2016publication,
-  title={Publication and citation patterns of Korean LIS research by subject areas},
-  author={Yang, Kiduk and Lee, Jongwook and Choi, Wonchan},
-  journal={Malaysian Journal of Library and Information Science},
-  volume={21},
-  number={2},
-  pages={67--81},
-  year={2016}
-}
-
-@article{choi2014college,
-  title={How do college students choose mobile health/wellness applications?},
-  author={Choi, Wonchan and Stvilia, Besiki},
-  journal={Proceedings of the American Society for Information Science and Technology},
-  volume={51},
+@article{choi2024reflective,
+  title={Reflective and Formative Indicators of Information Credibility on Social Media},
+  author={Choi, Wonchan and Zhu, Liya and Lee, Hyun Seung},
+  journal={Proceedings of the Association for Information Science and Technology},
+  volume={61},
   number={1},
-  pages={1--4},
-  year={2014},
-  publisher={Wiley Online Library}
+  pages={874--876},
+  year={2024},
+  publisher={John Wiley \& Sons, Inc. Hoboken, USA},
+  abstract={As part of a larger project to develop a scale for measuring web credibility perceptions, this poster reports on preliminary findings of a literature analysis to identify reflective and formative indicators of information credibility on social media. Of 90 papers found by a systematic database search and screening, this poster examines 20 papers focused on information credibility on microblogs (e.g., Twitter, Weibo) as a popular source for online users' information seeking. Our analysis identified 22 reflective indicators (e.g., fair, accurate) and 31 formative indicators (e.g., reputable, attractive), eight (e.g., trustworthy, unbiased) of which overlapped. Given the intertwined, often blurred border between these two sets of items, the coding scheme developed in the present study can help determine the relevance and type of the items. Future research directions are discussed.},
+  doi={https://doi.org/10.1002/pra2.1125}
 }
 
-@article{stvilia2015mobile,
-  title={Mobile wellness application-seeking behavior by college students—An exploratory study},
-  author={Stvilia, Besiki and Choi, Wonchan},
-  journal={Library \& Information Science Research},
-  volume={37},
+@article{choi2023developing,
+  title={Developing a platform-specific framework for web credibility assessment: A case of social Q\&A sites},
+  author={Choi, Wonchan and Stvilia, Besiki and Lee, Hyun Seung},
+  journal={Information Processing \& Management},
+  volume={60},
   number={3},
-  pages={201--208},
-  year={2015},
+  pages={103321},
+  year={2023},
+  publisher={Pergamon}
+}
+
+@article{zheng2023exploration,
+  title={An Exploration of Robot-Mediated Tai Chi Exercise for Older Adults},
+  author={Zheng, Zhi and Oh, Hyunkyoung and Mim, Mayesha and Choi, Wonchan and Lee, Yura},
+  journal={Applied Sciences},
+  volume={13},
+  number={9},
+  pages={5306},
+  year={2023},
+  publisher={MDPI}
+}
+
+@article{choi2023exploring,
+  title={Exploring applications and user experience with generative AI tools: A content analysis of reddit posts on ChatGPT},
+  author={Choi, Wonchan and Zhang, Yan and Stvilia, Besiki},
+  journal={Proceedings of the Association for Information Science and Technology},
+  volume={60},
+  number={1},
+  pages={543--546},
+  year={2023},
+  publisher={John Wiley \& Sons, Inc. Hoboken, USA}
+}
+
+@article{choi2023preliminary,
+  title={Preliminary findings on developing a scale for credibility assessment on interactive web platforms},
+  author={Choi, Wonchan and Zhu, Liya},
+  journal={Proceedings of the Association for Information Science and Technology},
+  volume={60},
+  number={1},
+  pages={929--931},
+  year={2023},
+  publisher={John Wiley \& Sons, Inc. Hoboken, USA}
+}
+
+@article{choi2022design,
+  title={Design matters in web credibility assessment: Interactive design as a social validation tool for online health information seekers},
+  author={Choi, Wonchan and Kim, Sang-Yeon and Luo, Manman},
+  journal={Asian Communication Research},
+  volume={19},
+  number={3},
+  pages={119--138},
+  year={2022}
+}
+
+@article{choi2022associations,
+  title={Associations between mastery of life and everyday life information-seeking behavior among older adults: Analysis of the Pew Research Center's information engaged and information wary survey data},
+  author={Choi, Wonchan and Park, Min Sook and Lee, Yura},
+  journal={Journal of the Association for Information Science and Technology},
+  volume={73},
+  number={3},
+  pages={393--406},
+  year={2022},
+  publisher={John Wiley \& Sons, Inc. Hoboken, USA}
+}
+
+@article{park2022understanding,
+  title={Understanding the research landscape of information and communication technology integration in dementia-focused assistive technologies: Mining literature from 1970 to 2020},
+  author={Park, Min Sook and Lee, Yura and Choi, Wonchan},
+  journal={Gerontechnology},
+  volume={21},
+  number={1},
+  pages={1--18},
+  year={2022},
+  publisher={元智大學老人福祉科技研究中心}
+}
+
+@article{lee2022respite,
+  title={Respite service use among dementia and nondementia caregivers: Findings from the National Caregiving in the US 2015 Survey},
+  author={Lee, Yura and Choi, Wonchan and Park, Min Sook},
+  journal={Journal of Applied Gerontology},
+  volume={41},
+  number={6},
+  pages={1557--1567},
+  year={2022},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
+
+@article{choi2022developing,
+  title={Developing a theoretical framework for web credibility assessment—A case of social Q\&A sites: preliminary findings},
+  author={Choi, Wonchan and Stvilia, Besiki},
+  year={2022},
+  publisher={iSchools}
+}
+
+@article{wang2021feature,
+  title={A feature-oriented analysis of developers’ descriptions and user reviews of top mHealth applications for diabetes and hypertension},
+  author={Wang, Shengang and Lee, Hyun Seung and Choi, Wonchan},
+  journal={International Journal of Medical Informatics},
+  volume={156},
+  pages={104598},
+  year={2021},
   publisher={Elsevier}
 }
 
-@article{choi2015new,
-  title={New framework of web credibility assessment and an exploratory study of older adults' information behavior on the Web},
-  author={Choi, Wonchan},
-  year={2015}
-}
-
-@article{choi2014college,
-  title={College Students' Value Structure of Choosing and Using Mobile Health/Wellness Applications: Preliminary Findings},
-  author={Choi, Wonchan and Stvilia, Besiki},
-  journal={iConference 2014 Proceedings},
-  year={2014},
-  publisher={iSchools}
-}
-
-@article{choi2015new,
-  title={A new framework for Web credibility assessment},
-  author={Choi, Wonchan and Stvilia, Besiki},
-  journal={IConference 2015 Proceedings},
-  year={2015},
-  publisher={iSchools}
-}
-
-@article{choi2013use,
-  title={Use of mobile wellness applications and perception of quality},
-  author={Choi, Wonchan and Stvilia, Besiki},
-  journal={Proceedings of the American Society for Information Science and Technology},
-  volume={50},
-  number={1},
-  pages={1--4},
-  year={2013},
-  publisher={Wiley Subscription Services, Inc., A Wiley Company Hoboken}
-}
-
-@incollection{baeg2012impact,
-  title={The impact of the public library on early reading achievement: using the Early Childhood Longitudinal Study (ECLS) 1st grade student sample},
-  author={Baeg, Jung Hoon and Choi, Wonchan and Lee, Dong Joon and Lee, Jisue},
-  booktitle={Proceedings of the 2012 iConference},
-  pages={538--540},
-  year={2012}
-}
-
-@article{choi2017effective,
-  title={Effective use of user interface and user experience in an mHealth application},
-  author={Choi, Wonchan and Tulu, Bengisu},
-  year={2017}
-}
-
-@article{choi2016developing,
-  title={Developing an mHealth Application for Osteoarthritis Patients},
-  author={Choi, Wonchan and Tulu, Bengisu and Zheng, Hua and Franklin, Patricia},
-  year={2016}
-}
-
-@article{lee2013difference,
-  title={Difference in citation rates by subject areas of LIS in Korea},
-  author={Lee, Jongwook and Choi, Wonchan},
-  journal={Proceedings of the American Society for Information Science and Technology},
-  volume={50},
-  number={1},
-  pages={1--4},
-  year={2013},
-  publisher={Wiley Subscription Services, Inc., A Wiley Company Hoboken}
-}
-
-@article{choi2015web,
-  title={Web credibility assessment: Conceptualization, operationalization, variability, and models},
-  author={Choi, Wonchan and Stvilia, Besiki},
-  journal={Journal of the Association for Information Science and Technology},
-  volume={66},
-  number={12},
-  pages={2399--2414},
-  year={2015}
-}
-
-@article{zheng2017using,
-  title={Using mHealth app to support treatment decision-making for knee arthritis: patient perspective},
-  author={Zheng, Hua and Tulu, Bengisu and Choi, Wonchan and Franklin, Patricia},
-  journal={Egems},
+@article{lee2021respite,
+  title={Respite Service Use among Dementia and Nondementia Caregivers: Findings from the Caregiving in the US 2015 Survey},
+  author={Lee, Yura and Choi, Wonchan and Park, Min Sook},
+  journal={Innovation in Aging},
   volume={5},
-  number={2},
-  pages={7},
-  year={2017}
+  number={Suppl 1},
+  pages={958},
+  year={2021}
 }
 
-@incollection{choi2012senior,
-  title={Senior citizens' credibility assessment of online health information: a proposal of a mixed methods study},
-  author={Choi, Wonchan},
-  booktitle={Proceedings of the 2012 iConference},
-  pages={620--622},
-  year={2012}
-}
-
-@article{zheng2017using,
-  title={Using mHealth App to Support TKR Decision Making for Knee Arthritis Patients},
-  author={Zheng, Hua and Tulu, Bengisu and Choi, Wonchan and Franklin, Patricia D},
-  year={2017}
-}
-
-@article{yang2015looking,
-  title={Looking beyond the numbers: Bibliometric approach to analysis of LIS research in Korea},
-  author={Yang, Kiduk and Lee, Jongwook and Choi, Wonchan},
-  journal={Journal of the Korean Society for Library and Information Science},
-  volume={49},
-  number={4},
-  pages={241--264},
-  year={2015},
-  publisher={Korean Society For Library And Information Science}
-}
-
-@article{oh2013sonzogno,
-  title={The sonzogno digital library project},
-  author={Oh, Sanghee and Choi, Wonchan and Valisa, Silvia},
-  journal={Proceedings of the American Society for Information Science and Technology},
-  volume={50},
+@article{choi2020validating,
+  title={Validating an extended typology of web credibility assessment},
+  author={Choi, Wonchan and Luo, Manman and Kim, Sang-Yeon},
+  journal={Proceedings of the Association for Information Science and Technology},
+  volume={57},
   number={1},
-  pages={1--4},
-  year={2013},
-  publisher={Wiley Online Library}
+  pages={e357},
+  year={2020},
+  publisher={John Wiley \& Sons, Inc. Hoboken, USA}
 }
 
-@incollection{choi2013makes,
-  title={What makes online health information credible for older adults? An exploratory study},
+@article{choi2020older,
+  title={Older adults' credibility assessment of online health information: An exploratory study using an extended typology of web credibility},
   author={Choi, Wonchan},
-  booktitle={CHI'13 Extended Abstracts on Human Factors in Computing Systems},
-  pages={2671--2676},
-  year={2013}
+  journal={Journal of the Association for Information Science and Technology},
+  year={2020},
+  publisher={WILEY}
+}
+
+@article{choi2020systematic,
+  title={A systematic review of mobile health technologies to support self-management of concurrent diabetes and hypertension},
+  author={Choi, Wonchan and Wang, Shengang and Lee, Yura and Oh, Hyunkyoung and Zheng, Zhi},
+  journal={Journal of the American Medical Informatics Association},
+  volume={27},
+  number={6},
+  pages={939--945},
+  year={2020},
+  publisher={Oxford University Press}
+}
+
+@article{oh2019challenges,
+  title={CHALLENGES IN SELF-MANAGEMENT AMONG OLDER ADULTS WITH HYPERTENSION AND DIABETES},
+  author={Oh, Hyunkyoung and Lee, Yura and Choi, Wonchan and Zheng, Zhi},
+  journal={Innovation in Aging},
+  volume={3},
+  number={Supplement\_1},
+  pages={S316--S317},
+  year={2019},
+  publisher={Oxford University Press US}
 }
 
 @article{choi2019mhealth,
@@ -222,53 +259,189 @@
   publisher={JAI}
 }
 
-@article{choi2020older,
-  title={Older adults' credibility assessment of online health information: An exploratory study using an extended typology of web credibility},
-  author={Choi, Wonchan},
-  journal={Journal of the Association for Information Science and Technology},
-  year={2020},
-  publisher={WILEY}
-}
-
-@article{choi2020systematic,
-  title={A systematic review of mobile health technologies to support self-management of concurrent diabetes and hypertension},
-  author={Choi, Wonchan and Wang, Shengang and Lee, Yura and Oh, Hyunkyoung and Zheng, Zhi},
-  journal={Journal of the American Medical Informatics Association},
-  volume={27},
-  number={6},
-  pages={939--945},
-  year={2020},
-  publisher={Oxford University Press}
-}
-
-@article{oh2019challenges,
-  title={CHALLENGES IN SELF-MANAGEMENT AMONG OLDER ADULTS WITH HYPERTENSION AND DIABETES},
-  author={Oh, Hyunkyoung and Lee, Yura and Choi, Wonchan and Zheng, Zhi},
-  journal={Innovation in Aging},
-  volume={3},
-  number={Supplement\_1},
-  pages={S316--S317},
-  year={2019},
-  publisher={Oxford University Press US}
-}
-
-@article{choi2020validating,
-  title={Validating an extended typology of web credibility assessment},
-  author={Choi, Wonchan and Luo, Manman and Kim, Sang-Yeon},
-  journal={Proceedings of the Association for Information Science and Technology},
-  volume={57},
-  number={1},
-  pages={e357},
-  year={2020},
-  publisher={John Wiley \& Sons, Inc. Hoboken, USA}
-}
-
 @inproceedings{tulu2017framework,
   title={A Framework to Design Mhealth Apps for Supporting Self-Management of Chronic Disease},
   author={Tulu, Bengisu and Choi, Wonchan and Zheng, Hua and Franklin, Patricia},
   booktitle={2017 Annual Research Meeting},
   year={2017},
   organization={AcademyHealth}
+}
+
+@article{choi2017effects,
+  title={Effects of User Interface Design and Task Complexity Level on User Experience in an mHealth Application},
+  author={Choi, Wonchan and Tulu, Bengisu},
+  year={2017}
+}
+
+@article{choi2017effective,
+  title={Effective use of user interface and user experience in an mHealth application},
+  author={Choi, Wonchan and Tulu, Bengisu},
+  year={2017}
+}
+
+@article{zheng2017using,
+  title={Using mHealth App to Support TKR Decision Making for Knee Arthritis Patients},
+  author={Zheng, Hua and Tulu, Bengisu and Choi, Wonchan and Franklin, Patricia D},
+  year={2017}
+}
+
+@article{choi2016developing,
+  title={Developing an mHealth Application for Osteoarthritis Patients},
+  author={Choi, Wonchan and Tulu, Bengisu and Zheng, Hua and Franklin, Patricia},
+  year={2016}
+}
+
+@article{yang2016publication,
+  title={Publication and citation patterns of Korean LIS research by subject areas},
+  author={Yang, Kiduk and Lee, Jongwook and Choi, Wonchan},
+  journal={Malaysian Journal of Library and Information Science},
+  volume={21},
+  number={2},
+  pages={67--81},
+  year={2016}
+}
+
+@article{yang2015looking,
+  title={Looking beyond the numbers: Bibliometric approach to analysis of LIS research in Korea},
+  author={Yang, Kiduk and Lee, Jongwook and Choi, Wonchan},
+  journal={Journal of the Korean Society for Library and Information Science},
+  volume={49},
+  number={4},
+  pages={241--264},
+  year={2015},
+  publisher={Korean Society For Library And Information Science}
+}
+
+@article{choi2015new,
+  title={A new framework for Web credibility assessment},
+  author={Choi, Wonchan and Stvilia, Besiki},
+  journal={IConference 2015 Proceedings},
+  year={2015},
+  publisher={iSchools}
+}
+
+@article{stvilia2015mobile,
+  title={Mobile wellness application-seeking behavior by college students—An exploratory study},
+  author={Stvilia, Besiki and Choi, Wonchan},
+  journal={Library \& Information Science Research},
+  volume={37},
+  number={3},
+  pages={201--208},
+  year={2015},
+  publisher={Elsevier}
+}
+
+@article{choi2015web,
+  title={Web credibility assessment: Conceptualization, operationalization, variability, and models},
+  author={Choi, Wonchan and Stvilia, Besiki},
+  journal={Journal of the Association for Information Science and Technology},
+  volume={66},
+  number={12},
+  pages={2399--2414},
+  year={2015}
+}
+
+@article{choi2015new,
+  title={New framework of web credibility assessment and an exploratory study of older adults' information behavior on the Web},
+  author={Choi, Wonchan},
+  year={2015}
+}
+
+@article{choi2014college,
+  title={College Students' Value Structure of Choosing and Using Mobile Health/Wellness Applications: Preliminary Findings},
+  author={Choi, Wonchan and Stvilia, Besiki},
+  journal={iConference 2014 Proceedings},
+  year={2014},
+  publisher={iSchools}
+}
+
+@article{choi2014college,
+  title={How do college students choose mobile health/wellness applications?},
+  author={Choi, Wonchan and Stvilia, Besiki},
+  journal={Proceedings of the American Society for Information Science and Technology},
+  volume={51},
+  number={1},
+  pages={1--4},
+  year={2014},
+  publisher={Wiley Online Library}
+}
+
+@article{choi2013guidelines,
+  title={Guidelines for older-adult-friendly online tutorial for Facebook: Content, design, and training principles},
+  author={Choi, Wonchan and Carranza, Julia and Fox, Melissa},
+  journal={Proceedings of the American Society for Information Science and Technology},
+  volume={50},
+  number={1},
+  pages={1--4},
+  year={2013},
+  publisher={Wiley Subscription Services, Inc., A Wiley Company Hoboken}
+}
+
+@article{lee2013difference,
+  title={Difference in citation rates by subject areas of LIS in Korea},
+  author={Lee, Jongwook and Choi, Wonchan},
+  journal={Proceedings of the American Society for Information Science and Technology},
+  volume={50},
+  number={1},
+  pages={1--4},
+  year={2013},
+  publisher={Wiley Subscription Services, Inc., A Wiley Company Hoboken}
+}
+
+@article{choi2013use,
+  title={Use of mobile wellness applications and perception of quality},
+  author={Choi, Wonchan and Stvilia, Besiki},
+  journal={Proceedings of the American Society for Information Science and Technology},
+  volume={50},
+  number={1},
+  pages={1--4},
+  year={2013},
+  publisher={Wiley Subscription Services, Inc., A Wiley Company Hoboken}
+}
+
+@incollection{baeg2012impact,
+  title={The impact of the public library on early reading achievement: using the Early Childhood Longitudinal Study (ECLS) 1st grade student sample},
+  author={Baeg, Jung Hoon and Choi, Wonchan and Lee, Dong Joon and Lee, Jisue},
+  booktitle={Proceedings of the 2012 iConference},
+  pages={538--540},
+  year={2012}
+}
+
+@article{zheng2017using,
+  title={Using mHealth app to support treatment decision-making for knee arthritis: patient perspective},
+  author={Zheng, Hua and Tulu, Bengisu and Choi, Wonchan and Franklin, Patricia},
+  journal={Egems},
+  volume={5},
+  number={2},
+  pages={7},
+  year={2017}
+}
+
+@incollection{choi2012senior,
+  title={Senior citizens' credibility assessment of online health information: a proposal of a mixed methods study},
+  author={Choi, Wonchan},
+  booktitle={Proceedings of the 2012 iConference},
+  pages={620--622},
+  year={2012}
+}
+
+@article{oh2013sonzogno,
+  title={The sonzogno digital library project},
+  author={Oh, Sanghee and Choi, Wonchan and Valisa, Silvia},
+  journal={Proceedings of the American Society for Information Science and Technology},
+  volume={50},
+  number={1},
+  pages={1--4},
+  year={2013},
+  publisher={Wiley Online Library}
+}
+
+@incollection{choi2013makes,
+  title={What makes online health information credible for older adults? An exploratory study},
+  author={Choi, Wonchan},
+  booktitle={CHI'13 Extended Abstracts on Human Factors in Computing Systems},
+  pages={2671--2676},
+  year={2013}
 }
 
 @article{chang2008trends,
@@ -291,176 +464,4 @@
   pages={165--184},
   year={2008},
   publisher={Korean Society for Information Management}
-}
-
-@article{choi2022associations,
-  title={Associations between mastery of life and everyday life information-seeking behavior among older adults: Analysis of the Pew Research Center's information engaged and information wary survey data},
-  author={Choi, Wonchan and Park, Min Sook and Lee, Yura},
-  journal={Journal of the Association for Information Science and Technology},
-  volume={73},
-  number={3},
-  pages={393--406},
-  year={2022},
-  publisher={John Wiley \& Sons, Inc. Hoboken, USA}
-}
-
-@article{wang2021feature,
-  title={A feature-oriented analysis of developers’ descriptions and user reviews of top mHealth applications for diabetes and hypertension},
-  author={Wang, Shengang and Lee, Hyun Seung and Choi, Wonchan},
-  journal={International Journal of Medical Informatics},
-  volume={156},
-  pages={104598},
-  year={2021},
-  publisher={Elsevier}
-}
-
-@article{lee2022respite,
-  title={Respite service use among dementia and nondementia caregivers: Findings from the National Caregiving in the US 2015 Survey},
-  author={Lee, Yura and Choi, Wonchan and Park, Min Sook},
-  journal={Journal of Applied Gerontology},
-  volume={41},
-  number={6},
-  pages={1557--1567},
-  year={2022},
-  publisher={SAGE Publications Sage CA: Los Angeles, CA}
-}
-
-@article{choi2022developing,
-  title={Developing a theoretical framework for web credibility assessment—A case of social Q\&A sites: preliminary findings},
-  author={Choi, Wonchan and Stvilia, Besiki},
-  year={2022},
-  publisher={iSchools}
-}
-
-@article{lee2021respite,
-  title={Respite Service Use among Dementia and Nondementia Caregivers: Findings from the Caregiving in the US 2015 Survey},
-  author={Lee, Yura and Choi, Wonchan and Park, Min Sook},
-  journal={Innovation in Aging},
-  volume={5},
-  number={Suppl 1},
-  pages={958},
-  year={2021}
-}
-
-@article{choi2022design,
-  title={Design matters in web credibility assessment: Interactive design as a social validation tool for online health information seekers},
-  author={Choi, Wonchan and Kim, Sang-Yeon and Luo, Manman},
-  journal={Asian Communication Research},
-  volume={19},
-  number={3},
-  pages={119--138},
-  year={2022}
-}
-
-@article{choi2023developing,
-  title={Developing a platform-specific framework for web credibility assessment: A case of social Q\&A sites},
-  author={Choi, Wonchan and Stvilia, Besiki and Lee, Hyun Seung},
-  journal={Information Processing \& Management},
-  volume={60},
-  number={3},
-  pages={103321},
-  year={2023},
-  publisher={Pergamon}
-}
-
-@article{zheng2023exploration,
-  title={An Exploration of Robot-Mediated Tai Chi Exercise for Older Adults},
-  author={Zheng, Zhi and Oh, Hyunkyoung and Mim, Mayesha and Choi, Wonchan and Lee, Yura},
-  journal={Applied Sciences},
-  volume={13},
-  number={9},
-  pages={5306},
-  year={2023},
-  publisher={MDPI}
-}
-
-@article{park2022understanding,
-  title={Understanding the research landscape of information and communication technology integration in dementia-focused assistive technologies: Mining literature from 1970 to 2020},
-  author={Park, Min Sook and Lee, Yura and Choi, Wonchan},
-  journal={Gerontechnology},
-  volume={21},
-  number={1},
-  pages={1--18},
-  year={2022},
-  publisher={元智大學老人福祉科技研究中心}
-}
-
-@article{choi2023exploring,
-  title={Exploring applications and user experience with generative AI tools: A content analysis of reddit posts on ChatGPT},
-  author={Choi, Wonchan and Zhang, Yan and Stvilia, Besiki},
-  journal={Proceedings of the Association for Information Science and Technology},
-  volume={60},
-  number={1},
-  pages={543--546},
-  year={2023},
-  publisher={John Wiley \& Sons, Inc. Hoboken, USA}
-}
-
-@article{choi2023preliminary,
-  title={Preliminary findings on developing a scale for credibility assessment on interactive web platforms},
-  author={Choi, Wonchan and Zhu, Liya},
-  journal={Proceedings of the Association for Information Science and Technology},
-  volume={60},
-  number={1},
-  pages={929--931},
-  year={2023},
-  publisher={John Wiley \& Sons, Inc. Hoboken, USA}
-}
-
-@article{xie2024help,
-  title={Help-Seeking Situations Related to Visual Interactions on Mobile Platforms and Recommended Designs for Blind and Visually Impaired Users},
-  author={Xie, Iris and Choi, Wonchan and Wang, Shengang and Lee, Hyun Seung and Hong, Bo Hyun and Wang, Ning-Chiao and Cudjoe, Emmanuel Kwame},
-  journal={Journal of Imaging},
-  volume={10},
-  number={8},
-  pages={205},
-  year={2024},
-  publisher={MDPI},
-  abstract={While it is common for blind and visually impaired (BVI) users to use mobile devices to search for information, little research has explored the accessibility issues they encounter in their interactions with information retrieval systems, in particular digital libraries (DLs). This study represents one of the most comprehensive research projects, investigating accessibility issues, especially help-seeking situations BVI users face in their DL search processes. One hundred and twenty BVI users were recruited to search for information in six DLs on four types of mobile devices (iPhone, iPad, Android phone, and Android tablet), and multiple data collection methods were employed: questionnaires, think-aloud protocols, transaction logs, and interviews. This paper reports part of a large-scale study, including the categories of help-seeking situations BVI users face in their interactions with DLs, focusing on seven types of help-seeking situations related to visual interactions on mobile platforms: difficulty finding a toggle-based search feature, difficulty understanding a video feature, difficulty navigating items on paginated sections, difficulty distinguishing collection labels from thumbnails, difficulty recognizing the content of images, difficulty recognizing the content of graphs, and difficulty interacting with multilayered windows. Moreover, corresponding design recommendations are also proposed: placing meaningful labels for icon-based features in an easy-to-access location, offering intuitive and informative video descriptions for video players, providing structure information about a paginated section, separating collection/item titles from thumbnail descriptions, incorporating artificial intelligence image/graph recognition mechanisms, and limiting screen reader interactions to active windows. Additionally, the limitations of the study and future research are discussed.},
-  doi={https://doi.org/10.3390/jimaging10080205}
-}
-
-@article{an2024college,
-  title={College Students' Metaphors for ChatGPT: An Exploratory Study},
-  author={An, Jiaxin and Bak, Hyerin and Choi, Wonchan and Zhang, Yan and Stvilia, Besiki},
-  journal={Proceedings of the Association for Information Science and Technology},
-  volume={61},
-  number={1},
-  pages={846--848},
-  year={2024},
-  publisher={John Wiley \& Sons, Inc. Hoboken, USA},
-  abstract={The introduction of ChatGPT has sparked significant interest and presented both great opportunities and challenges to higher education. While more students are using ChatGPT, little is known about their mental models for and sensemaking of the system, including the metaphors they use to understand the system. In this exploratory study, we interviewed 25 students at three universities in the US during the summer of 2023 to identify the metaphors they use for ChatGPT. Through qualitative analysis of the interview transcripts, we found that participants commonly used metaphors to make sense of ChatGPT. They compared ChatGPT to humans and popular technologies or tools, with being the most frequently Google mentioned. These findings highlight the potential for metaphor-based design and the development of AI literacy programs.},
-  doi={https://doi.org/10.1002/pra2.1116}
-}
-
-@article{choi2024reflective,
-  title={Reflective and Formative Indicators of Information Credibility on Social Media},
-  author={Choi, Wonchan and Zhu, Liya and Lee, Hyun Seung},
-  journal={Proceedings of the Association for Information Science and Technology},
-  volume={61},
-  number={1},
-  pages={874--876},
-  year={2024},
-  publisher={John Wiley \& Sons, Inc. Hoboken, USA},
-  abstract={As part of a larger project to develop a scale for measuring web credibility perceptions, this poster reports on preliminary findings of a literature analysis to identify reflective and formative indicators of information credibility on social media. Of 90 papers found by a systematic database search and screening, this poster examines 20 papers focused on information credibility on microblogs (e.g., Twitter, Weibo) as a popular source for online users' information seeking. Our analysis identified 22 reflective indicators (e.g., fair, accurate) and 31 formative indicators (e.g., reputable, attractive), eight (e.g., trustworthy, unbiased) of which overlapped. Given the intertwined, often blurred border between these two sets of items, the coding scheme developed in the present study can help determine the relevance and type of the items. Future research directions are discussed.},
-  doi={https://doi.org/10.1002/pra2.1125}
-}
-
-@article{choi2024college,
-  title={College students' credibility assessments of GenAI-generated information for academic tasks: An interview study},
-  author={Choi, Wonchan and Bak, Hyerin and An, Jiaxin and Zhang, Yan and Stvilia, Besiki},
-  journal={Journal of the Association for Information Science and Technology},
-  year={2024},
-  publisher={John Wiley \& Sons, Inc. Hoboken, USA},
-  abstract={The study explored college students' use of generative artificial intelligence (GenAI) tools, such as ChatGPT, for academic tasks and their perceptions and behaviors in assessing the credibility of GenAI-generated information. Semistructured interviews were conducted with 25 college students in the United States. Interview transcripts were analyzed using the qualitative content analysis method. The study identified various types of academic tasks for which students used ChatGPT, including writing, programming, and learning. Guided by two models of credibility assessment Hilligoss and Rieh (2008); Metzger (2007), six factors influencing students' motivation and ability to assess the credibility of GenAI-generated information were identified (e.g., task salience, social pressure). We also identified 9 constructs (e.g., refinedness, explainability), 5 heuristics (e.g., inter- and intrasystem consistency heuristics), and 10 cues (e.g., version and tone) used by students to assess the credibility of GenAI-generated information. This study provides theoretical and empirical findings regarding students' use of GenAI tools in the academic context and credibility evaluation of the system outputs using rich, qualitative interview data.},
-  doi={https://doi.org/10.1002/asi.24978},
-  selected={true}
-}
-
-@article{xie2025investigating,
-  title={Investigating the interactions between individuals with disabilities and information retrieval systems: A review of help-seeking situations, search tactics, and design recommendations},
-  author={Xie, Iris and Choi, Wonchan and Lee, Hyun Seung and Hong, Bo Hyun and Wang, Shengang},
-  journal={Journal of the Association for Information Science and Technology},
-  year={2025},
-  publisher={John Wiley \& Sons, Inc. Hoboken, USA}
 }
